--- a/data/test/dataset_validate.ipynb
+++ b/data/test/dataset_validate.ipynb
@@ -2,28 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-20T17:04:47.916967886Z",
-     "start_time": "2023-12-20T17:04:45.807504165Z"
+     "end_time": "2023-12-26T08:00:07.821807467Z",
+     "start_time": "2023-12-26T08:00:06.177917883Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/PhilippSchmidt/miniforge3/envs/cvlab2023/lib/python3.9/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: dlopen(/Users/PhilippSchmidt/miniforge3/envs/cvlab2023/lib/python3.9/site-packages/torchvision/image.so, 0x0006): Library not loaded: @rpath/libjpeg.8.dylib\n",
-      "  Referenced from: <A9A8F989-731E-38CF-AD19-47727B1A070E> /Users/PhilippSchmidt/miniforge3/envs/cvlab2023/lib/python3.9/site-packages/torchvision/image.so\n",
-      "  Reason: tried: '/Users/PhilippSchmidt/miniforge3/envs/cvlab2023/lib/python3.9/site-packages/torchvision/../../../libjpeg.8.dylib' (no such file), '/Users/PhilippSchmidt/miniforge3/envs/cvlab2023/lib/python3.9/site-packages/torchvision/../../../libjpeg.8.dylib' (no such file), '/Users/PhilippSchmidt/miniforge3/envs/cvlab2023/lib/python3.9/lib-dynload/../../libjpeg.8.dylib' (no such file), '/Users/PhilippSchmidt/miniforge3/envs/cvlab2023/bin/../lib/libjpeg.8.dylib' (no such file), '/usr/local/lib/libjpeg.8.dylib' (no such file), '/usr/lib/libjpeg.8.dylib' (no such file, not in dyld cache)\n",
-      "  warn(f\"Failed to load image Python extension: {e}\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
+    "\n",
+    "import torch\n",
     "\n",
     "# Get the parent directory\n",
     "parent_dir = os.path.dirname(os.path.realpath(\"../\"))\n",
@@ -40,17 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-20T17:04:47.943842400Z",
-     "start_time": "2023-12-20T17:04:47.802943867Z"
+     "end_time": "2023-12-26T08:00:07.824252648Z",
+     "start_time": "2023-12-26T08:00:07.820751332Z"
     }
    },
    "outputs": [],
    "source": [
     "G_SCENARIO = 1\n",
-    "G_DATSET_MAX_SIZE = None  # for speed we reduce the dataset size, enter None for all data.\n",
+    "G_DATSET_MAX_SIZE = 10  # for speed we reduce the dataset size, enter None for all data.\n",
     "\n",
     "# use small test set in the beginning to validate that the code is working.\n",
     "G_TRAIN_SET_RATIO = 0.5\n",
@@ -58,8 +49,7 @@
     "assert (G_TEST_SET_RATIO + G_TRAIN_SET_RATIO) <= 1.0, 'Test and Train set split invalid'\n",
     "\n",
     "# choose data set location\n",
-    "G_DATASET_LOCATION = \"../../data/aos-data/focalstack-1/20230912_part1\"\n",
-    "G_DATASET_LOCATION = \"../../../focal_dataset\"\n",
+    "G_DATASET_LOCATION = \"../../data/aos-data/focalstack-1/train\"\n",
     "\n",
     "#####################################\n",
     "# Training settings\n",
@@ -69,11 +59,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-20T17:05:10.647214355Z",
-     "start_time": "2023-12-20T17:04:47.810644382Z"
+     "end_time": "2023-12-26T08:00:08.216208504Z",
+     "start_time": "2023-12-26T08:00:07.824408232Z"
     }
    },
    "outputs": [
@@ -81,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5362\n"
+      "10\n"
      ]
     }
    ],
@@ -97,11 +87,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([10, 3, 512, 512])"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataloader = DataLoader(dataset, batch_size=10, shuffle=False)\n",
+    "feature, label = next(iter(dataloader))\n",
+    "feature.size()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-26T08:00:08.762356595Z",
+     "start_time": "2023-12-26T08:00:08.214310406Z"
+    }
+   },
+   "execution_count": 4
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([10, 786432])"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature.flatten(1).size()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-26T08:00:08.900722191Z",
+     "start_time": "2023-12-26T08:00:08.814495778Z"
+    }
+   },
+   "execution_count": 5
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[0.5294],\n        [0.2157],\n        [0.3216],\n        [0.3529],\n        [0.3137],\n        [0.7216],\n        [0.4196],\n        [0.3882],\n        [0.5137],\n        [0.4471]])"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "medians, _ = torch.median(feature.flatten(1), dim=1, keepdim=True)\n",
+    "medians"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-26T08:00:34.134254919Z",
+     "start_time": "2023-12-26T08:00:33.853992654Z"
+    }
+   },
+   "execution_count": 8
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([10, 3, 1, 1])"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "medians.unsqueeze(1).repeat(1, 3, 1).unsqueeze(2).size()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-26T08:00:35.405698156Z",
+     "start_time": "2023-12-26T08:00:35.345199723Z"
+    }
+   },
+   "execution_count": 9
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([10, 3, 512, 512])"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "medians.unsqueeze(1).repeat(1, 3, 1).unsqueeze(2).repeat(1, 1, 512, 512).size()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-26T08:00:37.070246212Z",
+     "start_time": "2023-12-26T08:00:37.005490609Z"
+    }
+   },
+   "execution_count": 10
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "512"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "medians.unsqueeze(1).repeat(1, 3, 1).unsqueeze(2).repeat(1, 1, 512, 512).size(-1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-26T08:00:37.990424910Z",
+     "start_time": "2023-12-26T08:00:37.915242414Z"
+    }
+   },
+   "execution_count": 11
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "The size of tensor a (512) must match the size of tensor b (10) at non-singleton dimension 2",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mRuntimeError\u001B[0m                              Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[59], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mtorch\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mones_like\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfeature\u001B[49m\u001B[43m)\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43m \u001B[49m\u001B[43mmedians\u001B[49m\n",
+      "\u001B[0;31mRuntimeError\u001B[0m: The size of tensor a (512) must match the size of tensor b (10) at non-singleton dimension 2"
+     ]
+    }
+   ],
+   "source": [
+    "torch.ones_like(feature) * medians"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-26T07:11:22.631329554Z",
+     "start_time": "2023-12-26T07:11:22.558478288Z"
+    }
+   },
+   "execution_count": 59
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-20T17:05:10.648508828Z",
-     "start_time": "2023-12-20T17:05:10.647307505Z"
+     "end_time": "2023-12-26T06:52:56.628302284Z",
+     "start_time": "2023-12-26T06:52:56.565158897Z"
     }
    },
    "outputs": [],
